optimizamos codigo